force-app/main/default/objects/Training_Course__c/fields/Areas_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Interest__c</fullName>
    <label>Areas of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Training_Areas_of_Interest</valueSetName>
    </valueSet>
</CustomField>