force-app/main/default/objects/Training_Course__c/fields/Attributed_Training_Hours__c.field-meta.xml
<CustomField>
    <fullName>Attributed_Training_Hours__c</fullName>
    <label>Attributed Training Hours</label>
    <summarizedField>Training_Session__c.Total_Training_Hours_for_Session__c</summarizedField>
    <summaryForeignKey>Training_Session__c.Training_Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>