force-app/main/default/objects/Training_Course__c/fields/Cumulative_Open_Seats__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Open_Seats__c</fullName>
    <label>Cumulative Open Seats</label>
    <summarizedField>Training_Session__c.Num_of_Seats_Still_Open__c</summarizedField>
    <summaryForeignKey>Training_Session__c.Training_Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>