force-app/main/default/objects/Training_Course__c/fields/Training_Program__c.field-meta.xml
<CustomField>
    <fullName>Training_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Program</label>
    <referenceTo>Training_Program__c</referenceTo>
    <relationshipLabel>Training Courses</relationshipLabel>
    <relationshipName>Training_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>