force-app/main/default/objects/Training_Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Training_Program__c</columns>
    <columns>Number_of_Sessions__c</columns>
    <columns>Areas_of_Interest__c</columns>
    <columns>Attributed_Training_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>